--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1555,3 +1555,4 @@ If the message is not included in your transfer, we cannot credit your account, 
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
+bciWallet.title=Bitcoin Interest Wallet
