--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1,4 +1,4 @@
-﻿acceptorder.submit=接受
+﻿﻿acceptorder.submit=接受
 acceptorder.text=你把一个单据这类数据
 acceptorder.title=接受单据
 acceptordersuccess.link=链接
@@ -1478,3 +1478,4 @@ If the message is not included in your transfer, we cannot credit your account, 
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
+bciWallet.title=Bitcoin Interest Wallet
