--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1409,3 +1409,4 @@ plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
+bciWallet.title=Bitcoin Interest Wallet
