--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1517,3 +1517,4 @@ plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
+bciWallet.title=Bitcoin Interest Wallet
