--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1410,3 +1410,4 @@ admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
+btxWallet.title=BitCore Wallet
