added news archive

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -462,6 +462,7 @@ session.expire = 登录失效。需要重新认证
 table.backward = 上一页
 news.variant =  新闻类型
 news.title = 主题
+news.archive = 新闻档案
 currency.pair = 对
 orders.currencypair = 货币对
 currency.allpairs = 所有对
