--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -513,6 +513,7 @@ order.redeleteerror=Formulir untuk menghapus order telah dikirim. Tunggu hasilny
 order.cannotcancel=order tidak bisa dihapus
 wallets.balance=Saldo
 news.title=BERITA
+news.archive=ARSIP BERITA
 news.more=Lebih detail...
 news.absent=Berita dalam bahasa Rusia yang hilang
 news.locale=Bahasa berita
