--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -457,6 +457,7 @@ order.redeleteerror=The form to delete the order has been submited already. Wait
 order.cannotcancel=The order can not be deleted
 wallets.balance=Balance
 news.title=NEWS
+news.archive=NEWS ARCHIVE
 news.more=More...
 news.absent=News in English is missing
 news.locale=Language
