Add wallet titles

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1411,3 +1411,4 @@ admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
 btxWallet.title=BitCore Wallet
+bbccWallet.title=BB CashCoin Wallet
