--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1559,3 +1559,4 @@ admin.stats.allRealUsers=\u0412\u0441\u0435 \u0440\u0435\u0430\u043B\u044C\u043D
 szcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A ShopZCoin
 bciWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Interest
 btxWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A BitCore
+bbccWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A BB CashCoin
