--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1557,3 +1557,4 @@ admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
 btxWallet.title=BitCore Wallet
+bbccWallet.title=BB CashCoin Wallet
