--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1519,3 +1519,4 @@ admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
 btxWallet.title=BitCore Wallet
+bbccWallet.title=BB CashCoin Wallet
