--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -481,8 +481,10 @@ news.successdelete=The news deleted successfully
 news.errordelete=Error while the news deleting
 dashboard.trading=Trading
 dashboard.qr=To enter via QR code
+mywallets.balanceTotal=Total balance in USD
 mywallets.currency=Currency
 mywallets.amount=Amount
+mywallets.amountTotal=Amount total
 currency.pairs=Currency Pairs
 currency.allpairs=All Pairs
 currency.pair=Pair
