--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -526,6 +526,7 @@ transactionsourcetype.ACCRUAL = 附加费
 dashboard.qr = 通过二维码登录
 admin.referralLevel =  级别
 admin.referral = 链接系统
+mywallets.balanceTotal=Total balance in USD
 mywallets.currency = 资金
 admin.refAbsentCommonRoot = 不存在
 myorders.amount = 数额
@@ -548,6 +549,7 @@ dashboard.onlinechatsend = 汇款
 dashboard.dealshistory = 所有交易
 transaction.operationTypeREFERRAL =  推荐系统
 mywallets.amount = 数额
+mywallets.amountTotal=Amount total
 history.referral =  推荐奖金
 dashboard.time = 时间
 operationtype.STORNO = 紧急
