--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -538,8 +538,10 @@ news.successdelete=Berita telah dihapus
 news.errordelete=Kesalahan menghapus berita
 dashboard.trading=Tawar-menawar
 dashboard.qr=Masuk dengan kode QR
+mywallets.balanceTotal=Total balance in USD
 mywallets.currency=Mata uang
 mywallets.amount=Jumlah
+mywallets.amountTotal=Amount total
 currency.pairs=Pasangan mata uang
 currency.allpairs=Semua pasangan
 currency.pair=Pasangan
