--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -526,7 +526,7 @@ transactionsourcetype.ACCRUAL = 附加费
 dashboard.qr = 通过二维码登录
 admin.referralLevel =  级别
 admin.referral = 链接系统
-mywallets.balanceTotal=Total balance in USD
+mywallets.balanceTotal=总余额美元：
 mywallets.currency = 资金
 admin.refAbsentCommonRoot = 不存在
 myorders.amount = 数额
