--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -538,7 +538,7 @@ news.successdelete=Berita telah dihapus
 news.errordelete=Kesalahan menghapus berita
 dashboard.trading=Tawar-menawar
 dashboard.qr=Masuk dengan kode QR
-mywallets.balanceTotal=Total balance in USD
+mywallets.balanceTotal=Saldo total dalam USD:
 mywallets.currency=Mata uang
 mywallets.amount=Jumlah
 mywallets.amountTotal=Amount total
