--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -505,7 +505,7 @@ news.successdelete=\u0627\u0644\u0627\u062E\u0628\u0627\u0631 \u0645\u062D\u0630
 news.errordelete=\u062E\u0637\u0627 \u0628\u062D\u0630\u0641 \u0627\u0644\u0627\u062E\u0628\u0627\u0631
 dashboard.trading=\u0645\u0632\u0627\u062F \u0639\u0644\u0646\u064A
 dashboard.qr= QR \u0627\u0644\u062F\u062E\u0648\u0644 \u0639\u0628\u0631 \u0643\u0648\u062F
-mywallets.balanceTotal=Total balance in USD
+mywallets.balanceTotal=\u0627\u0644\u0631\u0635\u064A\u062F \u0627\u0644\u0643\u0644\u064A \u0628\u0627\u0644\u062F\u0648\u0644\u0627\u0631 \u0627\u0644\u0623\u0645\u0631\u064A\u0643\u064A:
 mywallets.currency=\u0627\u0644\u0639\u0645\u0644\u0629
 mywallets.amount=\u0627\u0644\u0643\u0645\u064A\u0629
 mywallets.amountTotal=Amount total
