--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -550,7 +550,7 @@ dashboard.onlinechatsend = 汇款
 dashboard.dealshistory = 所有交易
 transaction.operationTypeREFERRAL =  推荐系统
 mywallets.amount = 数额
-mywallets.amountTotal=Amount total
+mywallets.amountTotal=总额
 history.referral =  推荐奖金
 dashboard.time = 时间
 operationtype.STORNO = 紧急
