--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -542,7 +542,7 @@ dashboard.qr=Masuk dengan kode QR
 mywallets.balanceTotal=Saldo total dalam USD:
 mywallets.currency=Mata uang
 mywallets.amount=Jumlah
-mywallets.amountTotal=Amount total
+mywallets.amountTotal=Jumlah total
 currency.pairs=Pasangan mata uang
 currency.allpairs=Semua pasangan
 currency.pair=Pasangan
