add AMLToken coin

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1416,3 +1416,4 @@ bciWallet.title=Bitcoin Interest Wallet
 message.additional.address.warning.SLT=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
+amlWallet.title=AMLToken wallet
