--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1471,7 +1471,7 @@ message.additional.address.warning.XRP=If the destination tag is not included in
 message.additional.address.warning.XEM=When depositing, please send your message unencrypted. Please do not send mosaic or multisig transactions. They will not be credited.\
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
 refill.copyAdd=Copy {0}
-partners.title=For partners
+partners.title=HOW TO SUBMIT A COIN FOR LISTING
 partners.content=<p>Exrates.me team is ready to consider your request to add your coin or token to the listing. \
 To submit a request, please provide the following technical information on your coin (token):</p>\
 <p>1. General description of technology - whether it is blockchain-driven or not, smart contract support etc.</p>\
