--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1409,3 +1409,5 @@ bciWallet.title=Bitcoin Interest Wallet
 message.additional.address.warning.SLT=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
+message.additional.address.warning.NPXSXEM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
+If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
