--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1472,6 +1472,8 @@ plcWallet.title=Platincoin Wallet
 message.additional.address.warning.DIM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message
 admin.datatable.showData=Show data
+admin.currency.id=Currency id
+admin.rate.to.usd=Rate to USD
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
