--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1404,6 +1404,8 @@ btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
 admin.stats.allRealUsers=All real users
+admin.currency.id=Currency id
+admin.rate.to.usd=Rate to USD
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
 message.additional.address.warning.SLT=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
