--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1511,6 +1511,8 @@ fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 btcpWallet.title=Bitcoin Private wallet
 plcWallet.title=Platincoin Wallet
 admin.datatable.showData=Show data
+admin.currency.id=Currency id
+admin.rate.to.usd=Rate to USD
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
