--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1551,6 +1551,8 @@ fee.wallet.insufficientCosts.title=\u041D\u0435\u0434\u043E\u0441\u0442\u0430\u0
 btcpWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Private
 plcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Platincoin
 admin.datatable.showData=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u0434\u0430\u043D\u043D\u044B\u0435
+admin.currency.id=Id \u0432\u0430\u043B\u044E\u0442\u044B
+admin.rate.to.usd=\u041A\u0443\u0440\u0441 \u0432 USD
 admin.stats.allRealUsers=\u0412\u0441\u0435 \u0440\u0435\u0430\u043B\u044C\u043D\u044B\u0435 \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
 szcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A ShopZCoin
 bciWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Bitcoin Interest
