new view for alerts warning

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1317,8 +1317,8 @@ admin.users.new=New users registered
 ip.ban.message=Your IP address is banned for {0}. Please try to login again later
 ip.ban.time.minutes = {0} minutes
 ip.ban.time.hours = {0} hours
-message.alertUpdate=Attention! In the near future an update will be made. The exchange will not be available for {0} minutes.
-message.alertTechWorks=Technical works performing now. Exchange may works unstable
+message.alertUpdate=Attention! EXRATES will not be available for {0} minutes due to updating! We apologize for the inconvenience!
+message.alertTechWorks=EXRATES is under maintenance! Occasional interruptions in work are possible! We apologize for the inconvenience!
 admin.transferCommissions=Transfer comissions
 admin.merchantsCommissions.transfer=Comission for transfer
 admin.merchantsCommissions.minSum=Min transfer sum
