add warnings for some currencies

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1517,3 +1517,7 @@ bciWallet.title=Bitcoin Interest Wallet
 message.additional.address.warning.SLT=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
+input.warning.LSK=LSK default fee will be subtracted from your payment!
+input.warning.BTW=BTW default fee will be subtracted from your payment!
+input.warning.RISE=RISE default fee will be subtracted from your payment!
+input.warning.ARK=ARK default fee will be subtracted from your payment!
