--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1428,5 +1428,5 @@ input.warning.LSK=LSK default fee will be subtracted from your payment!
 input.warning.BTW=BTW default fee will be subtracted from your payment!
 input.warning.RISE=RISE default fee will be subtracted from your payment!
 input.warning.ARK=ARK default fee will be subtracted from your payment!
-refill.invoice.payed=I payed
+refill.invoice.paid=I paid
 refill.unconfirmed.invoices=Requests waiting for confirmation
