EX-220 add nycoin

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1581,3 +1581,5 @@ refill.unconfirmed.invoices=Requests waiting for confirmation
 bbccWallet.title=BB CashCoin Wallet
 beetWallet.title=BeetleCoin wallet
 dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has already been used. Request password recovery again please!
+
+nycWallet.title=NewYorkCoin wallet
