--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1437,3 +1437,4 @@ refill.invoice.paid=I paid
 refill.unconfirmed.invoices=Requests waiting for confirmation
 bbccWallet.title=BB CashCoin Wallet
 beetWallet.title=BeetleCoin wallet
+nycWallet.title=NewYorkCoin wallet
