--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -707,6 +707,7 @@ admin.currencyLimits.minLimit=Minimal sum
 admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
 admin.currencyLimits.maxDailyRequest=Max daily requests count
+admin.externalWallets.title=External wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
