--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -801,6 +801,7 @@ admin.currencyLimits.minLimit=\u041C\u0438\u043D\u0438\u043C\u0430\u043B\u044C\u
 admin.currencyLimits.name=\u0412\u0430\u043B\u044E\u0442\u0430
 admin.currencyLimits.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 admin.currencyLimits.maxDailyRequest=\u041C\u0430\u043A\u0441. \u0441\u0443\u0442\u043E\u0447\u043D\u043E\u0435 \u043A-\u0432\u043E \u0437\u0430\u043F\u0440\u043E\u0441\u043E\u0432
+admin.externalWallets.title=\u0412\u043D\u0435\u0448\u043D\u0438\u0435 \u043A\u043E\u0448\u0435\u043B\u044C\u043A\u0438
 news.createInEditor=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u043E\u0441\u0442\u044C \u0432 \u0440\u0435\u0434\u0430\u043A\u0442\u043E\u0440\u0435
 news.uploadArchive=\u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C ZIP \u0430\u0440\u0445\u0438\u0432
 news.newsTitle=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
