--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -783,6 +783,11 @@ admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
 admin.currencyLimits.maxDailyRequest=Max daily requests count
 admin.externalWallets.title=External wallets
+admin.externalWallets.name=Currency
+admin.externalWallets.reservedWalletBalance=Reserved wallet balance
+admin.externalWallets.coldWalletBalance=Cold wallet balance
+admin.externalWallets.mainWalletBalance=Main wallet balance
+admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -1542,6 +1547,7 @@ btczWallet.title=BitcoinZ Wallet
 lccWallet.title=LitecoinCash Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+reports.balancesWithWallets=Balances with wallets
 bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
