--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -708,6 +708,11 @@ admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
 admin.currencyLimits.maxDailyRequest=Max daily requests count
 admin.externalWallets.title=External wallets
+admin.externalWallets.name=Currency
+admin.externalWallets.reservedWalletBalance=Reserved wallet balance
+admin.externalWallets.coldWalletBalance=Cold wallet balance
+admin.externalWallets.mainWalletBalance=Main wallet balance
+admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -1464,6 +1469,7 @@ occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+reports.balancesWithWallets=Balances with wallets
 lccWallet.title=LitecoinCash Wallet
 bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
