--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -661,6 +661,11 @@ admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
 admin.currencyLimits.maxDailyRequest=Max daily requests count
 admin.externalWallets.title=External wallets
+admin.externalWallets.name=Currency
+admin.externalWallets.reservedWalletBalance=Reserved wallet balance
+admin.externalWallets.coldWalletBalance=Cold wallet balance
+admin.externalWallets.mainWalletBalance=Main wallet balance
+admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -1395,6 +1400,7 @@ occWallet.title=Octoin Wallet
 btczWallet.title=BitcoinZ Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+reports.balancesWithWallets=Balances with wallets
 message.additional.address.warning.DIM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
 lccWallet.title=LitecoinCash Wallet
