--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -746,6 +746,11 @@ admin.currencyLimits.name=Currency
 admin.currencyLimits.description=Description
 admin.currencyLimits.maxDailyRequest=Max daily requests count
 admin.externalWallets.title=External wallets
+admin.externalWallets.name=Currency
+admin.externalWallets.reservedWalletBalance=Reserved wallet balance
+admin.externalWallets.coldWalletBalance=Cold wallet balance
+admin.externalWallets.mainWalletBalance=Main wallet balance
+admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
 news.newsTitle=Title
@@ -1501,6 +1506,7 @@ btczWallet.title=BitcoinZ Wallet
 lccWallet.title=LitecoinCash Wallet
 reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
+reports.balancesWithWallets=Balances with wallets
 admin.withdrawal.statistic.filter=Withdrawal statistic
 admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
 admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
