--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1525,3 +1525,4 @@ input.warning.LSK=LSK default fee will be subtracted from your payment!
 input.warning.BTW=BTW default fee will be subtracted from your payment!
 input.warning.RISE=RISE default fee will be subtracted from your payment!
 input.warning.ARK=ARK default fee will be subtracted from your payment!
+beetWallet.title=BeetleCoin wallet
