--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -665,6 +665,8 @@ admin.externalWallets.name=Currency
 admin.externalWallets.reservedWalletBalance=Reserved wallet balance
 admin.externalWallets.coldWalletBalance=Cold wallet balance
 admin.externalWallets.mainWalletBalance=Main wallet balance
+admin.externalWallets.totalWalletBalance=Total wallet balance
+admin.externalWallets.totalWalletDifference=Difference
 admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
