--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1532,7 +1532,7 @@ To submit a request, please provide the following technical information on your 
 <br/>\
 <p>We will inform you on exact price only after studying all the technical documentation and the approval of the management.</p>\
 <br/>\
-<p>If you are interested, please mail to {0} with all required technical data.</p>
+<p>If you are interested, please mail to {0}, {1} with all required technical data.</p>
 btcWallet.feeRate=Fee rate, {0}/kB
 btcWallet.raw.payments=Payments:
 btcWallet.totalFee=Total fee amount;
