--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -996,6 +996,7 @@ admin.withdraw.manual=Manual withdrawal
 admin.withdraw.confirm=On confirmation
 admin.withdraw.accepted=Accepted
 admin.withdraw.declined=Declined
+admin.withdraw.checking=For checking
 admin.withdrawal.statistic.filter=Withdrawal statistic
 admin.withdrawal.statistic.manual_withdrawals=Manual withdrawals:
 admin.withdrawal.statistic.auto_withdrawals=Auto withdrawals:
