--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -789,6 +789,7 @@ admin.externalWallets.coldWalletBalance=Cold wallet balance
 admin.externalWallets.mainWalletBalance=Main wallet balance
 admin.externalWallets.totalWalletBalance=Total wallet balance
 admin.externalWallets.totalWalletDifference=Difference
+admin.externalWallets.totalWalletDifferenceUSD=Difference USD
 admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
@@ -1088,7 +1089,7 @@ btcWallet.payment.prompt=You are going to pay __amount__ {0} to address __addres
 btcWallet.successResult=Payment succeeded! Transaction ID {0}
 admin.reset=Reset
 adminAuthority.MANAGE_BTC_CORE_WALLET=Bitcoin Core wallet management
-
+adminAuthority.HIDDEN_CURRENCIES_IN_REPORTS=Allow hidden currencies in reports
 action.button.CONFIRM_USER_BUTTON=confirm
 action.button.CONFIRM_ADMIN_BUTTON=confirm
 action.button.REVOKE_BUTTON=revoke
