--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -752,6 +752,7 @@ admin.externalWallets.coldWalletBalance=Cold wallet balance
 admin.externalWallets.mainWalletBalance=Main wallet balance
 admin.externalWallets.totalWalletBalance=Total wallet balance
 admin.externalWallets.totalWalletDifference=Difference
+admin.externalWallets.totalWalletDifferenceUSD=Difference USD
 admin.externalWallets.modalTitle=Edit external wallets
 news.createInEditor=Create news in editor
 news.uploadArchive=Upload ZIP archive
@@ -1075,6 +1076,7 @@ withdrawal.phrases.decline.2 = Some reason 2
 withdrawal.phrases.decline.3 = Some reason 3
 admin.reset=Reset
 adminAuthority.MANAGE_BTC_CORE_WALLET=Bitcoin Core wallet management
+adminAuthority.HIDDEN_CURRENCIES_IN_REPORTS=Allow hidden currencies in reports
 userwallets.includeEmpty=Including empty entries
 session.settings=Session settings
 session.time.minutes=Session time, minutes
