--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -609,7 +609,12 @@ dashboard.privacy=\u0627\u0644\u0633\u0631\u064A\u0629
 contacts.feedback=\u0627\u0644\u0627\u062A\u0635\u0627\u0644 \u0627\u0644\u0639\u0643\u0633\u064A
 contacts.name=\u0627\u0644\u0627\u0633\u0645
 contacts.messageText=\u0646\u0635 \u0627\u0644\u0631\u0633\u0627\u0644\u0629
-contacts.contactPhone= \u0627\u0644\u0647\u0627\u062A\u0641:19734742145+
+
+contacts.fax=Fax: 021-29857201
+contacts.contactPhone=Contact phone: 021-59891815
+contacts.address=<p>Address: Gedung Menara Kadin Indonesia LT. 30JL, HR, Rasuna Said Blok X-5</p>\
+  <p>KAV. 2-3, KEL, Kuningan Timur, KEC. Setiabudi, Jakarta Selatan</p>\
+
 validation.messageexceeds= \u062D\u062C\u0645 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 \u062A\u062C\u0627\u0648\u0632 \u0627\u0644\u062D\u062F
 validation.messageIncorrectSize= \u064A\u062C\u0628 \u0623\u0646 \u064A\u0643\u0648\u0646 \u062D\u062C\u0645 \u0627\u0644\u0631\u0633\u0627\u0644\u0629 2\u0645\u0646-500 \u062D\u0631\u0641\u0627
 validation.nameIncorrectSize= \u064A\u062C\u0628 \u0623\u0646 \u064A\u0643\u0648\u0646 \u062D\u062C\u0645 \u0627\u0644\u0627\u0633\u0645 \u0628\u064A\u0646 2 \u0648 30 \u062D\u0631\u0641\u0627
@@ -672,10 +677,6 @@ merchants.depositNotificationWithCurrencyTHB.body = Please pay {0} on the wallet
     015-1-65751-6
 
 merchants.withoutInvoiceWallet = The wallet for payments is in creation stage, it will be opened in the near future.
-contacts.address=<p>Address:</p>\
-<p>99 Foch ave</p>\
-<p>Staten Island, NY 10305</p>\
-<p>USA</p>
 
 
 dashboard.termsContent=<p>1. About the project</p>\
