--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -613,22 +613,21 @@ dashboard.onlinechatbanned=You have no permission to send messages. Please conta
 user.fileNotChosen=文件未选择
 user.browse=浏览...
 
-contacts.address=<p>Address:</p>\
-<p>99 Foch ave</p>\
-<p>Staten Island, NY 10305</p>\
-<p>USA</p>
-
 
 contacts.feedback=反馈
 contacts.name=名称
 contacts.messageText=信息内容
-contacts.contactPhone=联系电话: +19734742145
 validation.messageIncorrectSize=信息内容必须不少于2个字符不超出500字符
 validation.nameIncorrectSize=名称长短必须不少于2个字符不超出30字符
 validation.nameRequired= “名字”栏必须填写
 validation.messageRequired=“信息内容”栏必须填写
 contacts.lettersent=信已发送
 
+contacts.fax=Fax: 021-29857201
+contacts.contactPhone=Contact phone: 021-59891815
+contacts.address=<p>Address: Gedung Menara Kadin Indonesia LT. 30JL, HR, Rasuna Said Blok X-5</p>\
+  <p>KAV. 2-3, KEL, Kuningan Timur, KEC. Setiabudi, Jakarta Selatan</p>\
+        
 dashboard.terms=Terms and Conditions
 dashboard.privacy=Privacy Policy
 
