--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -642,12 +642,12 @@ dashboard.privacy=Dirahasiakan
 contacts.feedback=Feedback
 contacts.name=Nama
 contacts.messageText=Pesan text
-contacts.contactPhone=Nomor telepon yang bisa dihubungi<br>\
-  +19734742145
-contacts.address=<p>Address:</p>\
-<p>99 Foch ave</p>\
-<p>Staten Island, NY 10305</p>\
-<p>USA</p>
+
+contacts.fax=Fax: 021-29857201
+contacts.contactPhone=Contact phone: 021-59891815
+contacts.address=<p>Address: Gedung Menara Kadin Indonesia LT. 30JL, HR, Rasuna Said Blok X-5</p>\
+  <p>KAV. 2-3, KEL, Kuningan Timur, KEC. Setiabudi, Jakarta Selatan</p>\
+
 validation.nameRequired=Field "Name" is required
 validation.messageRequired=Field "Message text" is required
 contacts.lettersent=Your letter is sent
