add messages props

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1527,3 +1527,4 @@ input.warning.LSK=LSK default fee will be subtracted from your payment!
 input.warning.BTW=BTW default fee will be subtracted from your payment!
 input.warning.RISE=RISE default fee will be subtracted from your payment!
 input.warning.ARK=ARK default fee will be subtracted from your payment!
+ptcWallet.title=PerfectCoin wallet
