add BitcoinClean, small refactoring

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1594,3 +1594,5 @@ beetWallet.title=\u043A\u043E\u0448\u0435\u043B\u0451\u043A BeetleCoin
 nycWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A NewYorkCoin
 ptcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043APerfectCoin
 fgcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Fantasy Gold
+
+admin.btcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A {0}
