--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1512,3 +1512,5 @@ beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+
+admin.btcWallet.title={0} wallet
