--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1552,3 +1552,5 @@ dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+
+admin.btcWallet.title={0} wallet
