--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -956,7 +956,7 @@ admin.withdraw.manual=Output pengguna
 admin.withdraw.confirm=Konfirmasi
 admin.withdraw.accepted=Diterima
 admin.withdraw.declined=Ditolak
-admin.withdraw.checking=For checking
+admin.withdraw.checking=REVIEW
 admin.invoice.updateAmount=Memperbarui jumlah aktual pembayaran
 merchants.invoice.ACCEPTED_AUTO=Accepted
 merchants.invoice.ON_BCH_EXAM=
