EX-84:Added HShare coin

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1482,6 +1482,7 @@ reports.totalBalances=Total balances statistics
 reports.balances.buttonTitle=Balances
 reports.balancesWithWallets=Balances with wallets
 lccWallet.title=LitecoinCash Wallet
+hsrWallet.title=HShare Wallet
 bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
