--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1418,6 +1418,7 @@ reports.balancesWithWallets=Balances with wallets
 message.additional.address.warning.DIM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
 If the message is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a message.
 lccWallet.title=LitecoinCash Wallet
+hsrWallet.title=HShare Wallet
 bcaWallet.title=Bitcoin Atom Wallet
 fee.wallet.insufficientCosts.title=Insufficient costs on fee wallet!
 fee.wallet.insufficientCosts.body=Insufficient costs on {0} fee wallet {0}!
