--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -124,6 +124,8 @@ dashboard.tradeByCurrency=currency trading
 dashboard.training=training
 dashboard.updatePasswordTitle=Change Password Form
 dashboard.yourBalance=your balance
+dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has already been used. Request password recovery again please!
+dashboard.getNewLink=Get new link
 dberror.text=Unfortunately, the operation can not be performed at this time. Please try again later
 dberror.title=Error!
 deleteorder.submit=Delete
