--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -566,7 +566,7 @@ currency.pairs = 货币对
 order.lockerror = 承付订单所选表格获取失败
 news.errorload = 文件加载错误
 news.addvariant = 添加／更新
-operationtype.WALLET_INNER_TRANSFER = ВНУТР
+operationtype.WALLET_INNER_TRANSFER = INNER
 merchants.warn = 请注意您投入的金额，要与上面所指出的一致。
 news.resource = 储存目录
 dashboard.commission = 手续费
