fix error message

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -339,7 +339,7 @@ usermenu.referral=My referral reference
 refferal.generate=Generate
 refferal.copy=Copy
 validation.emailexists=this e-mail already exists!
-validation.emailincorrect=incorrect e-mail!
+validation.emailincorrect=Sorry, this e-mail doesn't exist, try another, please.
 validation.emailrequired=email field shall be filled in
 validation.nicknameexceed=the allowed number of symbols was exceeded!
 validation.nicknameexists=this nickname already exists!
