Ex-166:Password symbol issue fixed

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -350,6 +350,8 @@ validation.passwordincorrect=The password should consist of letters (latin only)
 validation.passwordmismatch=passwords do not match!
 validation.passwordrequired=enter password!
 validation.phoneincorrect=Enter the phone number in "380671234567" format !
+validation.notallowedsymbol= field contains not allowed symbol
+
 dashboard.otherpairs=Other pairs
 transaction.initiatorEmail=Email
 merchants.currencyforoutput=Output currency
