--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -392,6 +392,7 @@ validation.passwordincorrect=Password harus berisi huruf (Latin saja) dan angka 
 validation.passwordmismatch=Kata sandi tidak cocok!
 validation.passwordrequired= Masukkan kata sandi!
 validation.phoneincorrect=Masukkan nomor hp dengan format "380671234567"!
+validation.notallowedsymbol=simbol yang dilarang di kolom
 
 
 dashboard.otherpairs=Pasangan lainnya
