--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -621,6 +621,8 @@ validation.messageIncorrectSize=信息内容必须不少于2个字符不超出50
 validation.nameIncorrectSize=名称长短必须不少于2个字符不超出30字符
 validation.nameRequired= “名字”栏必须填写
 validation.messageRequired=“信息内容”栏必须填写
+validation.notallowedsymbol=该领域存在不允许使用的符号
+
 contacts.lettersent=信已发送
 
 contacts.fax=Fax: 021-29857201
