add settings menu

--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -439,6 +439,7 @@ admin.promptDeleteUserFiles = Apakah Anda yakin ingin menghapus file ini?
 admin.successfulDeleteUserFiles =  File dihapus dengan sukses
 #not translated
 admin.uploadFiles = Upload file (gambar hanya * .png, * .jpeg,ukuran tidak lebih dari 5 MB)
+admin.uploadFiles.title=Upload files
 #not translated
 admin.yourFiles= File yang diunggah
 admin.ref=Link
