--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -405,7 +405,8 @@ admin.promptDeleteUserFiles = \u0647\u0644 \u062D\u0642\u0627 \u062A\u0631\u064A
 #not translated
 admin.successfulDeleteUserFiles = \u062A\u0645 \u062D\u0630\u0641 \u0627\u0644\u0645\u0644\u0641 \u0628\u0646\u062C\u0627\u062D
 #not translated
-admin.uploadFiles (\u0641\u0642\u0637 \u0635\u0648\u0631 *.png, *.jpeg, \u0628\u062D\u062C\u0645 \u0644\u0627 \u064A\u0641\u0648\u0642  5 \u041C\u0411)\u0642\u0645 \u0628\u062A\u062D\u0645\u064A\u0644 \u0627\u0644\u0645\u0644\u0641
+admin.uploadFiles = (\u0641\u0642\u0637 \u0635\u0648\u0631 *.png, *.jpeg, \u0628\u062D\u062C\u0645 \u0644\u0627 \u064A\u0641\u0648\u0642  5 \u041C\u0411)\u0642\u0645 \u0628\u062A\u062D\u0645\u064A\u0644 \u0627\u0644\u0645\u0644\u0641
+admin.uploadFiles.title=\u0642\u0645 \u0628\u062A\u062D\u0645\u064A\u0644 \u0627\u0644\u0645\u0644\u0641
 #not translated
 admin.yourFiles= \u0645\u0644\u0641\u0627\u062A \u0645\u062D\u0645\u0644\u0629
 admin.ref=\u0631\u0627\u0628\u0637
