--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -49,6 +49,7 @@ admin.modal.delete=Delete
 admin.promptDeleteUserFiles=Are you sure you want to delete this file ?
 admin.successfulDeleteUserFiles=File removed successful
 admin.uploadFiles=Upload files (Only images *.png, *.jpeg, not bigger than 5 MB)
+admin.uploadFiles.title=Upload files
 admin.yourFiles=Uploaded files
 admin.internalError=An error has occurred. Please try again later.
 admin.comments=Comments
