--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -769,6 +769,7 @@ admin.comments=Comments
 admin.creator=Creator
 admin.dateTime=Date:time
 admin.comment=Comment
+admin.checkLengthComment=Characters left:
 admin.createComment=Create comment
 admin.subjectCommentMessage=You have new comment from Exrates admin{0}
 admin.subjectCommentTitle=New comment from Exrates admin
