EX-151 EX-171 EX-193  EX-201

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -96,19 +96,19 @@ dashboard.entrance=Login
 dashboard.fee=commission:
 dashboard.feeForTransaction=fee for transaction
 dashboard.forBeginners=for beginners
-dashboard.forgotPassword=forgot password?
+dashboard.forgotPassword=Forgot password?
 dashboard.general=base startprice
 dashboard.goOut=exit
 dashboard.hello=hello!
 dashboard.highestPrice=Highest price
 dashboard.howItWork=HOW IT WORKS
 dashboard.legalityAndSecurity=legality and security
-dashboard.loginText=login
+dashboard.loginText=Login
 dashboard.lowestPrice=Lowest price
 dashboard.mobileApp=Mobile App
 dashboard.news=news
 dashboard.ourWeb=EXRATES.ME
-dashboard.passwordText=password
+dashboard.passwordText=Password
 dashboard.personalArea=personal area
 dashboard.priceFor=price for
 dashboard.resetPasswordButton=Reset password
