--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1501,3 +1501,5 @@ input.warning.ARK=ARK default fee will be subtracted from your payment!
 refill.invoice.paid=I paid
 refill.unconfirmed.invoices=Requests waiting for confirmation
 beetWallet.title=BeetleCoin wallet
+message.comission.fixed=Fixed
+merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
