--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1584,3 +1584,5 @@ refill.invoice.paid=\u042F \u043E\u043F\u043B\u0430\u0442\u0438\u043B
 refill.unconfirmed.invoices=\u0417\u0430\u044F\u0432\u043A\u0438 \u0432 \u043E\u0436\u0438\u0434\u0430\u043D\u0438\u0438 \u043F\u043E\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u044F
 bbccWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A BB CashCoin
 beetWallet.title=\u043A\u043E\u0448\u0435\u043B\u0451\u043A BeetleCoin
+message.comission.fixed=\u0424\u0438\u043A\u0441\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u0430\u044F
+merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
