inout info_modal

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1586,3 +1586,4 @@ beetWallet.title=BeetleCoin wallet
 dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has already been used. Request password recovery again please!
 
 nycWallet.title=NewYorkCoin wallet
+merchants.withdraw.ON_BCH_EXAM=ON bch exam
