--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -976,8 +976,8 @@ merchant.withdrawAutoThreshold=To be confirmed if more
 merchant.withdrawAutoThresholdExt=Confirmation needed if amount more than
 merchants.withdrawNotification.WAITING_MANUAL_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed
 merchants.withdrawNotification.WAITING_AUTO_POSTING=Your withdrawal request #{0} through system {1} has been accepted and it will be processed
-merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0} through system {1} is waiting for confirmation and then will be processed within {2}
-merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed within {2}
+merchants.withdrawNotification.WAITING_CONFIRMATION=Your withdrawal request #{0} through system {1} is waiting for confirmation and then will be processed within {2} seconds
+merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=Your withdrawal request #{0} through system {1} has been confirmed and will be processed within {2} seconds
 merchants.withdrawNotification.POSTED_MANUAL=Your withdrawal request #{0} through system {1} has been posted
 merchants.withdrawNotification.POSTED_AUTO=Your withdrawal request #{0} through system {1} has been posted
 merchants.withdrawNotification.DECLINED_ADMIN=Your withdrawal request #{0} has been declined
