add resend after 3 attemps

--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1588,3 +1588,4 @@ refill.unconfirmed.invoices=\u0417\u0430\u044F\u0432\u043A\u0438 \u0432 \u043E\u
 bbccWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A BB CashCoin
 beetWallet.title=\u043A\u043E\u0448\u0435\u043B\u0451\u043A BeetleCoin
 nycWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A NewYorkCoin
+notification.message.newPinCode=\u041D\u043E\u0432\u044B\u0439 \u043F\u0438\u043D-\u043A\u043E\u0434. 
