--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1441,3 +1441,4 @@ refill.unconfirmed.invoices=Requests waiting for confirmation
 bbccWallet.title=BB CashCoin Wallet
 beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
+notification.message.newPinCode=New pin-code.
