--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1546,3 +1546,4 @@ beetWallet.title=BeetleCoin wallet
 dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has already been used. Request password recovery again please!
 
 nycWallet.title=NewYorkCoin wallet
+notification.message.newPinCode=New pin-code.
