EX-381 add check

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1604,3 +1604,6 @@ merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is be
 merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
+btcWallet.blockhash=Block hash
+btcWallet.checkPayment.modal.body=Please enter hash of the block from where to start scanning (leave blank to scan all transactions)
+btcWallet.checkPayment.title=Check payments
