--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1587,3 +1587,4 @@ dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has
 
 nycWallet.title=NewYorkCoin wallet
 merchants.withdraw.ON_BCH_EXAM=ON bch exam
+merchants.withdrawNotification.REVOKED_USER=Your withdrawal request #{0} has been revoked
