--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1442,3 +1442,4 @@ bbccWallet.title=BB CashCoin Wallet
 beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 merchants.withdraw.ON_BCH_EXAM=ON bch exam
+merchants.withdrawNotification.REVOKED_USER=Your withdrawal request #{0} has been revoked
