--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1070,6 +1070,7 @@ merchants.withdrawNotification.WAITING_CONFIRMED_POSTING=\u0417\u0430\u043F\u044
 merchants.withdrawNotification.POSTED_MANUAL=\u0417\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 #{0} \u043F\u0440\u043E\u0432\u0435\u0434\u0435\u043D
 merchants.withdrawNotification.POSTED_AUTO=\u0417\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 #{0}  \u043F\u0440\u043E\u0432\u0435\u0434\u0435\u043D
 merchants.withdrawNotification.DECLINED_ADMIN=\u0417\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 #{0} \u043E\u0442\u043A\u043B\u043E\u043D\u0451\u043D
+merchants.withdrawNotification.REVOKED_USER=\u0417\u0430\u043F\u0440\u043E\u0441 \u043D\u0430 \u0432\u044B\u0432\u043E\u0434 #{0} \u043E\u0442\u043C\u0435\u043D\u0435\u043D
 admin.withdraw.All=\u0412\u0441\u0435
 transferInfo.title=\u0418\u043D\u0444\u043E\u0440\u043C\u0430\u0446\u0438\u044F \u043E \u043F\u0435\u0440\u0435\u0432\u043E\u0434\u0435
 admin.user.transactions.downloadHistory=\u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C \u0438\u0441\u0442\u043E\u0440\u0438\u044E
