--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1505,3 +1505,4 @@ refill.invoice.paid=I paid
 refill.unconfirmed.invoices=Requests waiting for confirmation
 beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
+notification.message.newPinCode=New pin-code.
