EX-287 add poup-up for success registration

--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -280,7 +280,7 @@ register.readrules=read and understood registration rules*
 register.repeatpassword=repeat password*
 register.sendletter=you've been sent a letter to confirm registration
 register.submit=get registered
-register.successfullyproved=You have successfully verified your email hash. Now you can log in
+register.successfullyproved=You have successfully finished registration
 register.title=registration of a new user
 submitorder.buy=buy
 submitorder.cancell=Cancel
