--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -124,7 +124,7 @@ dashboard.tradeByCurrency=currency trading
 dashboard.training=training
 dashboard.updatePasswordTitle=Change Password Form
 dashboard.yourBalance=your balance
-dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has already been used. Request password recovery again please!
+dashboard.resetPasswordDoubleClick=You've already used the link to recover your password. If necessary, please repeat the password recovery process.
 dashboard.getNewLink=Get new link
 dberror.text=Unfortunately, the operation can not be performed at this time. Please try again later
 dberror.title=Error!
