--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -627,8 +627,7 @@ validation.notallowedsymbol=该领域存在不允许使用的符号
 
 contacts.lettersent=信已发送
 
-contacts.fax=Fax: 021-29857201
-contacts.contactPhone=Contact phone: 021-59891815
+contacts.contactPhone=Contact phone: +628033218250
 contacts.address=<p>Address: Gedung Menara Kadin Indonesia LT. 30JL, HR, Rasuna Said Blok X-5</p>\
   <p>KAV. 2-3, KEL, Kuningan Timur, KEC. Setiabudi, Jakarta Selatan</p>\
         
