--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -298,7 +298,7 @@ transaction.currencyBuy=\u0639\u0645\u0644\u0629 \u0627\u0644\u0634\u0631\u0627\
 transaction.datetime=\u062A\u0627\u0631\u064A\u062E \u0627\u0646\u0634\u0627\u0621 \u0627\u0644\u0637\u0644\u0628
 transaction.exrates=exrates.me
 transaction.id=Id \u0627\u0644\u0645\u0639\u0627\u0645\u0644\u0629
-transaction.id.error.message.for.user=\u062a\u0645 \u062a\u062c\u0627\u0648\u0632 \u0627\u0644\u062d\u062f \u0627\u0644\u0623\u0642\u0635\u0649 \u0644\u0644\u0642\u064a\u0645\u0629\u002e \u064a\u062a\u0645 \u062a\u0639\u064a\u064a\u0646 \u0642\u064a\u0645\u0629 \u0627\u0644\u062d\u0642\u0644 \u0022\u0049\u0064 \u0627\u0644\u0645\u0639\u0627\u0645\u0644\u0629\u0022\u0625\u0644\u0649 \u0627\u0644\u0642\u064a\u0645\u0629 \u0627\u0644\u0642\u0635\u0648\u0649 \u0627\u0644\u0645\u0633\u0645\u0648\u062d \u0628\u0647\u0627\u002e
+transaction.id.error.message.for.user=\u062A\u0645 \u062A\u062C\u0627\u0648\u0632 \u0627\u0644\u062D\u062F \u0627\u0644\u0623\u0642\u0635\u0649 \u0644\u0644\u0642\u064A\u0645\u0629. \u064A\u062A\u0645 \u062A\u0639\u064A\u064A\u0646 \u0642\u064A\u0645\u0629 \u0627\u0644\u062D\u0642\u0644 "Id \u0627\u0644\u0645\u0639\u0627\u0645\u0644\u0629"\u0625\u0644\u0649 \u0627\u0644\u0642\u064A\u0645\u0629 \u0627\u0644\u0642\u0635\u0648\u0649 \u0627\u0644\u0645\u0633\u0645\u0648\u062D \u0628\u0647\u0627.
 transaction.merchant=\u0646\u0638\u0627\u0645 \u0627\u0644\u062F\u0641\u0639
 transaction.operationType=\u0646\u0648\u0639
 transaction.operationTypeAcceptOrder=\u0642\u0628\u0648\u0644 \u0627\u0644\u0637\u0644\u0628
@@ -613,8 +613,7 @@ contacts.feedback=\u0627\u0644\u0627\u062A\u0635\u0627\u0644 \u0627\u0644\u0639\
 contacts.name=\u0627\u0644\u0627\u0633\u0645
 contacts.messageText=\u0646\u0635 \u0627\u0644\u0631\u0633\u0627\u0644\u0629
 
-contacts.fax=Fax: 021-29857201
-contacts.contactPhone=Contact phone: 021-59891815
+contacts.contactPhone=Contact phone: +628033218250
 contacts.address=<p>Address: Gedung Menara Kadin Indonesia LT. 30JL, HR, Rasuna Said Blok X-5</p>\
   <p>KAV. 2-3, KEL, Kuningan Timur, KEC. Setiabudi, Jakarta Selatan</p>\
 
