--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -646,8 +646,7 @@ contacts.feedback=Feedback
 contacts.name=Nama
 contacts.messageText=Pesan text
 
-contacts.fax=Fax: 021-29857201
-contacts.contactPhone=Contact phone: 021-59891815
+contacts.contactPhone=Contact phone: +628033218250
 contacts.address=<p>Address: Gedung Menara Kadin Indonesia LT. 30JL, HR, Rasuna Said Blok X-5</p>\
   <p>KAV. 2-3, KEL, Kuningan Timur, KEC. Setiabudi, Jakarta Selatan</p>\
 
