--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1506,3 +1506,7 @@ refill.unconfirmed.invoices=Requests waiting for confirmation
 beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 merchants.withdraw.ON_BCH_EXAM=ON bch exam
+merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is being reviewing by the administrator
+merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
+merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
+merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
