--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1443,3 +1443,7 @@ beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 merchants.withdraw.ON_BCH_EXAM=ON bch exam
 merchants.withdrawNotification.REVOKED_USER=Your withdrawal request #{0} has been revoked
+merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is being reviewing by the administrator
+merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
+merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
+merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
