--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1165,7 +1165,7 @@ merchants.transfer=Transfer
 merchants.modalTransferHeader=You create transfer through system __transferType on __amount __currency
 merchants.modalTransferCommission=Transfer Fee will be : __amount __currency __percent
 merchants.modalTransferFinalSum=Amount to be transferred : __amount __currency
-merchants.modalTransferRecipient=Enter recipient user nickname :
+merchants.modalTransferRecipient=Enter recipient user nickname or e-mail:
 transfer.amount=Amount
 merchants.transferNotification.header=Exrates Transfer notification
 merchants.transferNotification.POSTED=Your transfer request #{0} through system {1} has been posted
