EX-212 add bitcoinreco

--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1592,5 +1592,6 @@ dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+brecoWallet.title=BitcoinReco wallet
 
 admin.btcWallet.title={0} wallet
