--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1512,5 +1512,6 @@ beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+brecoWallet.title=BitcoinReco wallet
 
 admin.btcWallet.title={0} wallet
