--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1594,5 +1594,6 @@ beetWallet.title=\u043A\u043E\u0448\u0435\u043B\u0451\u043A BeetleCoin
 nycWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A NewYorkCoin
 ptcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043APerfectCoin
 fgcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A Fantasy Gold
+brecoWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A BitcoinReco
 
 admin.btcWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A {0}
