--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -825,6 +825,7 @@ transfer.successful={0} {1} successfully transferred to user {2}
 transfer.negativeAmount=Negative or zero amount not acceptable
 transfer.invalidAmount=Amount exceeds wallet active balance
 transfer.userNotFound=User with nickname {0} not found
+transfer.nonExistentUser=\u7528\u6237\u4E0D\u5B58\u5728
 transfer.walletNotFound=No wallet found for this currency and user
 transfer.received=You received a transfer of {0} {1}
 transfer.invalidNickname=Invalid nickname
