--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1511,3 +1511,4 @@ beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+merchants.withdraw.ON_BCH_EXAM=On bch exam
