--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1551,3 +1551,4 @@ dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+merchants.withdraw.ON_BCH_EXAM=On bch exam
