--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1447,3 +1447,4 @@ beetWallet.title=BeetleCoin wallet
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
+merchants.withdraw.ON_BCH_EXAM=On bch exam
