--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1573,7 +1573,7 @@ admin.rate.to.usd=Rate to USD
 admin.stats.allRealUsers=All real users
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
-message.additional.address.warning.SLT=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
+message.additional.address.warning.SLT=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
 message.additional.address.warning.NPXSXEM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
@@ -1602,3 +1602,5 @@ merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is be
 merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
+message.additional.address.warning.VNT=If the destination memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
+merchant.modalInputFinalSum=
