--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1431,7 +1431,7 @@ admin.currency.id=Currency id
 admin.rate.to.usd=Rate to USD
 szcWallet.title=ShopZCoin wallet
 bciWallet.title=Bitcoin Interest Wallet
-message.additional.address.warning.SLT=If the destination tag is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a destination tag.
+message.additional.address.warning.SLT=If the memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
 btxWallet.title=BitCore Wallet
 xbdWallet.title=BitDollar wallet
 message.additional.address.warning.NPXSXEM=When depositing, please send your message unencrypted. Please do not send multisig transactions. They will not be credited.\
@@ -1457,3 +1457,4 @@ ptcWallet.title=PerfectCoin wallet
 fgcWallet.title=Fantasy Gold wallet
 admin.btcWallet.title={0} wallet
 brecoWallet.title=BitcoinReco wallet
+message.additional.address.warning.VNT=If the destination memo-id is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-id.
