EX-499 && 339 | Add hadle 404, 505 errors - redirect to page with error.

--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1525,4 +1525,12 @@ merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is w
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
 message.comission.fixed=Fixed
-merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
+
+error.message.http.status=HTTP status:
+error.404NotFound.message.title=Page not found
+error.404NotFound.message=Pages with the specified address does not exist
+error.500InternalServer.message.title=Internal server error
+error.500InternalServer.message=Please try again later or feel free to contact us if the problem persists.
+error.http.message.title=Some error
+error.http.message=Oops, something went wrong. <p> Try to refresh this page or feel free to contact us if the problem persists. </p>
+error.message.button.backToMain=Go to Main page
