--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1550,7 +1550,6 @@ bbccWallet.title=BB CashCoin Wallet
 beetWallet.title=BeetleCoin wallet
 dashboard.resetPasswordDoubleClick=Unfortunately, the password recovery link has already been used. Request password recovery again please!
 message.comission.fixed=Fixed
-merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
 
 nycWallet.title=NewYorkCoin wallet
 ptcWallet.title=PerfectCoin wallet
@@ -1567,3 +1566,12 @@ merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is be
 merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
+
+error.message.http.status=HTTP status:
+error.404NotFound.message.title=Page not found
+error.404NotFound.message=Pages with the specified address does not exist
+error.500InternalServer.message.title=Internal server error
+error.500InternalServer.message=Please try again later or feel free to contact us if the problem persists.
+error.http.message.title=Some error
+error.http.message=Oops, something went wrong. <p> Try to refresh this page or feel free to contact us if the problem persists. </p>
+error.message.button.backToMain=Go to Main page
