--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1461,4 +1461,12 @@ fgcWallet.title=Fantasy Gold wallet
 admin.btcWallet.title={0} wallet
 brecoWallet.title=BitcoinReco wallet
 message.comission.fixed=Fixed
-merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
+
+error.message.http.status=HTTP status:
+error.404NotFound.message.title=Page not found
+error.404NotFound.message=Pages with the specified address does not exist
+error.500InternalServer.message.title=Internal server error
+error.500InternalServer.message=Please try again later or feel free to contact us if the problem persists.
+error.http.message.title=Some error
+error.http.message=Oops, something went wrong. <p> Try to refresh this page or feel free to contact us if the problem persists. </p>
+error.message.button.backToMain=Go to Main page
