--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1277,7 +1277,7 @@ btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 action.button.ACCEPT_HOLDED_BUTTON=accept
 merchants.refill.xlm=Payment Address: {0}   <br>\
- Payment MEMO-ID: {1}
+ Payment MEMO-TEXT: {1}
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
 transaction.hash=Hash
 message.pincode.forlogin=Exrates. Pin for login {0}. IP {1}
@@ -1607,3 +1607,4 @@ btcWallet.checkPayment.title=Check payments
 sabrWallet.title=SABR wallet
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 merchant.modalInputFinalSum=
+merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
