--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1133,7 +1133,7 @@ merchants.withdrawDetails.destinationTag=Destination tag
 merchants.refill.xrp=Payment Address: {0}   <br>\
  Payment Destination TAG: {1}
 merchants.refill.xlm=Payment Address: {0}   <br>\
- Payment MEMO-ID: {1}
+ Payment MEMO-TEXT: {1}
 createdstoporder.text = Your stop-order was placed in common stack
 dashWallet.title=Dash Wallet
 transactionsourcetype.STOP_ORDER=STOP-ORDER
@@ -1464,3 +1464,4 @@ message.comission.fixed=Fixed
 sabrWallet.title=SABR wallet
 
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
+merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
