--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1198,7 +1198,7 @@ btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 merchants.refill.xlm=Payment Address: {0}   <br>\
- Payment MEMO-ID: {1}
+ Payment MEMO-TEXT: {1}
 message.pincode.forlogin=Exrates. Pin for login {0}. IP {1}
 transaction.hash=Hash
 merchants.withdraw.WAITING_REVIEWING=Waiting reviewing
@@ -1527,3 +1527,5 @@ merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 message.comission.fixed=Fixed
 sabrWallet.title=SABR wallet
+
+merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
