--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1232,7 +1232,7 @@ btcWallet.createRequest=Create refill request
 btcWallet.txDetails=Transaction details
 btcWallet.noAddress=Address not found in the database
 merchants.refill.xlm=Payment Address: {0}   <br>\
- Payment MEMO-ID: {1}
+ Payment MEMO-TEXT: {1}
 action.button.ACCEPT_HOLDED_BUTTON=accept
 voucher.code=Voucher redeem
 message.receive.voucher=Your account has been refilled for {0} {1}
@@ -1567,5 +1567,6 @@ merchants.withdrawNotification.IN_WORK_OF_ADMIN=Your withdraw request #{0} is be
 merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is waiting reviewing by the administrator
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
+merchants.withdrawNotification.DECLINED_ERROR=Your withdraw request #{0} is declined with error
 message.additional.address.warning.VNT=If the destination memo-text is not included in your transfer, we cannot credit your account, your funds being lost. Please do not deposit unless you make sure that you can specify a memo-text.
 sabrWallet.title=SABR wallet
