--- a/Controller/src/main/resources/messages_ar.properties
+++ b/Controller/src/main/resources/messages_ar.properties
@@ -1608,3 +1608,4 @@ btcWallet.blockhash=Block hash
 btcWallet.checkPayment.modal.body=Please enter hash of the block from where to start scanning (leave blank to scan all transactions)
 btcWallet.checkPayment.title=Check payments
 sabrWallet.title=SABR wallet
+order_ico.no_orders_for_rate=No ico order with current price
