--- a/Controller/src/main/resources/messages_in.properties
+++ b/Controller/src/main/resources/messages_in.properties
@@ -1568,3 +1568,4 @@ merchants.withdrawNotification.WAITING_REVIEWING=Your withdraw request #{0} is w
 merchants.withdrawNotification.IN_POSTING=Your withdrawal request #{0} is on posting
 merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
 sabrWallet.title=SABR wallet
+order_ico.no_orders_for_rate=No ico order with current price
