--- a/Controller/src/main/resources/messages_cn.properties
+++ b/Controller/src/main/resources/messages_cn.properties
@@ -1527,3 +1527,4 @@ merchants.withdrawNotification.CREATED_USER=Withdrawal request #{0} created
 message.comission.fixed=Fixed
 merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
 sabrWallet.title=SABR wallet
+order_ico.no_orders_for_rate=No ico order with current price
