--- a/Controller/src/main/resources/messages_en.properties
+++ b/Controller/src/main/resources/messages_en.properties
@@ -1463,3 +1463,4 @@ brecoWallet.title=BitcoinReco wallet
 message.comission.fixed=Fixed
 merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
 sabrWallet.title=SABR wallet
+order_ico.no_orders_for_rate=No ico order with current price
