--- a/Controller/src/main/resources/messages_ru.properties
+++ b/Controller/src/main/resources/messages_ru.properties
@@ -1610,3 +1610,4 @@ merchants.withdrawNotification.CREATED_USER=\u0417\u0430\u044F\u0432\u043A\u0430
 message.comission.fixed=\u0424\u0438\u043A\u0441\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u0430\u044F
 merchants.withdraw.ON_BCH_EXAM=ON_BCH_EXAM
 sabrWallet.title=\u041A\u043E\u0448\u0435\u043B\u0451\u043A SABR
+order_ico.no_orders_for_rate=\u041D\u0435\u0442 ico \u043E\u0440\u0434\u0435\u0440\u0430 \u0441 \u0442\u0430\u043A\u043E\u0439 \u0446\u0435\u043D\u043E\u0439
